--- a/style.css
+++ b/style.css
@@ -3,15 +3,16 @@
     padding: 35px;
     font-family: "Poppins", sans-serif;
     text-align: center;
+    line-height: 5;
   }
-  
-body {
-    background-color:  #C3B1E1;
-}
+  img {
+    width: 400px;
+    height: auto;
+  }
 .box {
 	width: 750px;
     height:600px;
-	background: rgba(0, 0, 0, 0.4);
+	background: rgba(10, 10, 10, 10);
 	padding: 50px;
 	text-align: center;
 	margin: auto;
